crates/ast/tests/snapshots/ast__lambda_1.snap
---
source: crates/ast/tests/ast.rs
expression: parsed.unwrap()
---
(
    AstLambda {
        range: AstRange {
            start: AstPoint { 0:0 },
            end: AstPoint { 0:8 },
        },
        parameters: AstLambdaParameters {
            range: AstRange {
                start: AstPoint { 0:0 },
                end: AstPoint { 0:1 },
            },
            values: [
                AstLambdaParameter {
                    range: AstRange {
                        start: AstPoint { 0:0 },
                        end: AstPoint { 0:1 },
                    },
                    jtype: None,
                    name: AstIdentifier {
                        range: AstRange {
                            start: AstPoint { 0:0 },
                            end: AstPoint { 0:1 },
                        },
                        value: "n",
                    },
                },
            ],
        },
        rhs: Block(
            AstBlock {
                range: AstRange {
                    start: AstPoint { 0:5 },
                    end: AstPoint { 0:8 },
                },
                entries: [],
            },
        ),
    },
    4,
)
