crates/ast/tests/snapshots/ast__lambda_2.snap
---
source: crates/ast/tests/ast.rs
expression: parsed.unwrap()
---
(
    AstLambda {
        range: AstRange {
            start: AstPoint { 0:0 },
            end: AstPoint { 0:16 },
        },
        parameters: AstLambdaParameters {
            range: AstRange {
                start: AstPoint { 0:0 },
                end: AstPoint { 0:9 },
            },
            values: [
                AstLambdaParameter {
                    range: AstRange {
                        start: AstPoint { 0:1 },
                        end: AstPoint { 0:2 },
                    },
                    jtype: None,
                    name: AstIdentifier {
                        range: AstRange {
                            start: AstPoint { 0:1 },
                            end: AstPoint { 0:2 },
                        },
                        value: "a",
                    },
                },
                AstLambdaParameter {
                    range: AstRange {
                        start: AstPoint { 0:4 },
                        end: AstPoint { 0:5 },
                    },
                    jtype: None,
                    name: AstIdentifier {
                        range: AstRange {
                            start: AstPoint { 0:4 },
                            end: AstPoint { 0:5 },
                        },
                        value: "b",
                    },
                },
                AstLambdaParameter {
                    range: AstRange {
                        start: AstPoint { 0:7 },
                        end: AstPoint { 0:8 },
                    },
                    jtype: None,
                    name: AstIdentifier {
                        range: AstRange {
                            start: AstPoint { 0:7 },
                            end: AstPoint { 0:8 },
                        },
                        value: "c",
                    },
                },
            ],
        },
        rhs: Block(
            AstBlock {
                range: AstRange {
                    start: AstPoint { 0:13 },
                    end: AstPoint { 0:16 },
                },
                entries: [],
            },
        ),
    },
    10,
)
