crates/ast/tests/snapshots/ast__lambda_expr.snap
---
source: crates/ast/tests/ast.rs
expression: parsed.unwrap()
---
(
    AstLambda {
        range: AstRange {
            start: AstPoint { 0:0 },
            end: AstPoint { 0:17 },
        },
        parameters: AstLambdaParameters {
            range: AstRange {
                start: AstPoint { 0:0 },
                end: AstPoint { 0:1 },
            },
            values: [
                AstLambdaParameter {
                    range: AstRange {
                        start: AstPoint { 0:0 },
                        end: AstPoint { 0:1 },
                    },
                    jtype: None,
                    name: AstIdentifier {
                        range: AstRange {
                            start: AstPoint { 0:0 },
                            end: AstPoint { 0:1 },
                        },
                        value: "n",
                    },
                },
            ],
        },
        rhs: Expr(
            [
                Base(
                    AstBaseExpression {
                        range: AstRange {
                            start: AstPoint { 0:5 },
                            end: AstPoint { 0:6 },
                        },
                        ident: Some(
                            Identifier(
                                AstIdentifier {
                                    range: AstRange {
                                        start: AstPoint { 0:5 },
                                        end: AstPoint { 0:6 },
                                    },
                                    value: "v",
                                },
                            ),
                        ),
                        values: None,
                        operator: None,
                    },
                ),
                Base(
                    AstBaseExpression {
                        range: AstRange {
                            start: AstPoint { 0:6 },
                            end: AstPoint { 0:7 },
                        },
                        ident: None,
                        values: None,
                        operator: Dot(
                            AstRange {
                                start: AstPoint { 0:6 },
                                end: AstPoint { 0:7 },
                            },
                        ),
                    },
                ),
                Base(
                    AstBaseExpression {
                        range: AstRange {
                            start: AstPoint { 0:7 },
                            end: AstPoint { 0:15 },
                        },
                        ident: Some(
                            Identifier(
                                AstIdentifier {
                                    range: AstRange {
                                        start: AstPoint { 0:7 },
                                        end: AstPoint { 0:15 },
                                    },
                                    value: "toString",
                                },
                            ),
                        ),
                        values: None,
                        operator: None,
                    },
                ),
                Base(
                    AstBaseExpression {
                        range: AstRange {
                            start: AstPoint { 0:15 },
                            end: AstPoint { 0:17 },
                        },
                        ident: None,
                        values: Some(
                            AstValues {
                                range: AstRange {
                                    start: AstPoint { 0:15 },
                                    end: AstPoint { 0:17 },
                                },
                                values: [],
                            },
                        ),
                        operator: None,
                    },
                ),
            ],
        ),
    },
    7,
)
