crates/ast/tests/snapshots/ast__lambda_in_expression.snap
---
source: crates/ast/tests/ast.rs
expression: parsed.unwrap()
---
(
    [
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:0 },
                    end: AstPoint { 0:7 },
                },
                ident: Some(
                    Identifier(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 0:0 },
                                end: AstPoint { 0:7 },
                            },
                            value: "numbers",
                        },
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:7 },
                    end: AstPoint { 0:8 },
                },
                ident: None,
                values: None,
                operator: Dot(
                    AstRange {
                        start: AstPoint { 0:7 },
                        end: AstPoint { 0:8 },
                    },
                ),
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:8 },
                    end: AstPoint { 0:15 },
                },
                ident: Some(
                    Identifier(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 0:8 },
                                end: AstPoint { 0:15 },
                            },
                            value: "forEach",
                        },
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:15 },
                    end: AstPoint { 0:52 },
                },
                ident: None,
                values: Some(
                    AstValues {
                        range: AstRange {
                            start: AstPoint { 0:15 },
                            end: AstPoint { 0:52 },
                        },
                        values: [
                            [
                                Lambda(
                                    AstLambda {
                                        range: AstRange {
                                            start: AstPoint { 0:17 },
                                            end: AstPoint { 0:50 },
                                        },
                                        parameters: AstLambdaParameters {
                                            range: AstRange {
                                                start: AstPoint { 0:17 },
                                                end: AstPoint { 0:20 },
                                            },
                                            values: [
                                                AstLambdaParameter {
                                                    range: AstRange {
                                                        start: AstPoint { 0:18 },
                                                        end: AstPoint { 0:19 },
                                                    },
                                                    jtype: None,
                                                    name: AstIdentifier {
                                                        range: AstRange {
                                                            start: AstPoint { 0:18 },
                                                            end: AstPoint { 0:19 },
                                                        },
                                                        value: "n",
                                                    },
                                                },
                                            ],
                                        },
                                        rhs: Block(
                                            AstBlock {
                                                range: AstRange {
                                                    start: AstPoint { 0:24 },
                                                    end: AstPoint { 0:50 },
                                                },
                                                entries: [
                                                    Expression(
                                                        AstBlockExpression {
                                                            range: AstRange {
                                                                start: AstPoint { 0:26 },
                                                                end: AstPoint { 0:48 },
                                                            },
                                                            value: [
                                                                Base(
                                                                    AstBaseExpression {
                                                                        range: AstRange {
                                                                            start: AstPoint { 0:26 },
                                                                            end: AstPoint { 0:32 },
                                                                        },
                                                                        ident: Some(
                                                                            Identifier(
                                                                                AstIdentifier {
                                                                                    range: AstRange {
                                                                                        start: AstPoint { 0:26 },
                                                                                        end: AstPoint { 0:32 },
                                                                                    },
                                                                                    value: "System",
                                                                                },
                                                                            ),
                                                                        ),
                                                                        values: None,
                                                                        operator: None,
                                                                    },
                                                                ),
                                                                Base(
                                                                    AstBaseExpression {
                                                                        range: AstRange {
                                                                            start: AstPoint { 0:32 },
                                                                            end: AstPoint { 0:33 },
                                                                        },
                                                                        ident: None,
                                                                        values: None,
                                                                        operator: Dot(
                                                                            AstRange {
                                                                                start: AstPoint { 0:32 },
                                                                                end: AstPoint { 0:33 },
                                                                            },
                                                                        ),
                                                                    },
                                                                ),
                                                                Base(
                                                                    AstBaseExpression {
                                                                        range: AstRange {
                                                                            start: AstPoint { 0:33 },
                                                                            end: AstPoint { 0:36 },
                                                                        },
                                                                        ident: Some(
                                                                            Identifier(
                                                                                AstIdentifier {
                                                                                    range: AstRange {
                                                                                        start: AstPoint { 0:33 },
                                                                                        end: AstPoint { 0:36 },
                                                                                    },
                                                                                    value: "out",
                                                                                },
                                                                            ),
                                                                        ),
                                                                        values: None,
                                                                        operator: None,
                                                                    },
                                                                ),
                                                                Base(
                                                                    AstBaseExpression {
                                                                        range: AstRange {
                                                                            start: AstPoint { 0:36 },
                                                                            end: AstPoint { 0:37 },
                                                                        },
                                                                        ident: None,
                                                                        values: None,
                                                                        operator: Dot(
                                                                            AstRange {
                                                                                start: AstPoint { 0:36 },
                                                                                end: AstPoint { 0:37 },
                                                                            },
                                                                        ),
                                                                    },
                                                                ),
                                                                Base(
                                                                    AstBaseExpression {
                                                                        range: AstRange {
                                                                            start: AstPoint { 0:37 },
                                                                            end: AstPoint { 0:44 },
                                                                        },
                                                                        ident: Some(
                                                                            Identifier(
                                                                                AstIdentifier {
                                                                                    range: AstRange {
                                                                                        start: AstPoint { 0:37 },
                                                                                        end: AstPoint { 0:44 },
                                                                                    },
                                                                                    value: "println",
                                                                                },
                                                                            ),
                                                                        ),
                                                                        values: None,
                                                                        operator: None,
                                                                    },
                                                                ),
                                                                Casted(
                                                                    AstCastedExpression {
                                                                        range: AstRange {
                                                                            start: AstPoint { 0:44 },
                                                                            end: AstPoint { 0:47 },
                                                                        },
                                                                        cast: AstJType {
                                                                            annotated: [],
                                                                            range: AstRange {
                                                                                start: AstPoint { 0:45 },
                                                                                end: AstPoint { 0:46 },
                                                                            },
                                                                            value: Class(
                                                                                AstIdentifier {
                                                                                    range: AstRange {
                                                                                        start: AstPoint { 0:45 },
                                                                                        end: AstPoint { 0:46 },
                                                                                    },
                                                                                    value: "n",
                                                                                },
                                                                            ),
                                                                        },
                                                                    },
                                                                ),
                                                            ],
                                                        },
                                                    ),
                                                ],
                                            },
                                        ),
                                    },
                                ),
                            ],
                        ],
                    },
                ),
                operator: None,
            },
        ),
    ],
    20,
)
