crates/ast/tests/snapshots/ast__lambda_value.snap
---
source: crates/ast/tests/ast.rs
expression: parsed.unwrap()
---
(
    AstLambda {
        range: AstRange {
            start: AstPoint { 0:0 },
            end: AstPoint { 0:9 },
        },
        parameters: AstLambdaParameters {
            range: AstRange {
                start: AstPoint { 0:0 },
                end: AstPoint { 0:1 },
            },
            values: [
                AstLambdaParameter {
                    range: AstRange {
                        start: AstPoint { 0:0 },
                        end: AstPoint { 0:1 },
                    },
                    jtype: None,
                    name: AstIdentifier {
                        range: AstRange {
                            start: AstPoint { 0:0 },
                            end: AstPoint { 0:1 },
                        },
                        value: "n",
                    },
                },
            ],
        },
        rhs: Expr(
            [
                Base(
                    AstBaseExpression {
                        range: AstRange {
                            start: AstPoint { 0:5 },
                            end: AstPoint { 0:9 },
                        },
                        ident: Some(
                            Value(
                                Nuget(
                                    BooleanLiteral(
                                        AstBoolean {
                                            range: AstRange {
                                                start: AstPoint { 0:5 },
                                                end: AstPoint { 0:9 },
                                            },
                                            value: true,
                                        },
                                    ),
                                ),
                            ),
                        ),
                        values: None,
                        operator: None,
                    },
                ),
            ],
        ),
    },
    3,
)
