crates/ast/tests/snapshots/ast__lambda_with_no_parameters.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    AstLambda {
        range: AstRange {
            start: AstPoint { 0:0 },
            end: AstPoint { 0:7 },
        },
        parameters: AstLambdaParameters {
            range: AstRange {
                start: AstPoint { 0:0 },
                end: AstPoint { 0:2 },
            },
            values: [],
        },
        rhs: Expr(
            [
                Base(
                    AstBaseExpression {
                        range: AstRange {
                            start: AstPoint { 0:6 },
                            end: AstPoint { 0:7 },
                        },
                        ident: Some(
                            Identifier(
                                AstIdentifier {
                                    range: AstRange {
                                        start: AstPoint { 0:6 },
                                        end: AstPoint { 0:7 },
                                    },
                                    value: "a",
                                },
                            ),
                        ),
                        values: None,
                        operator: None,
                    },
                ),
            ],
        ),
    },
    4,
)
