crates/ast/tests/snapshots/ast__lambda_with_types.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    AstLambda {
        range: AstRange {
            start: AstPoint { 0:0 },
            end: AstPoint { 0:38 },
        },
        parameters: AstLambdaParameters {
            range: AstRange {
                start: AstPoint { 0:0 },
                end: AstPoint { 0:10 },
            },
            values: [
                AstLambdaParameter {
                    range: AstRange {
                        start: AstPoint { 0:1 },
                        end: AstPoint { 0:4 },
                    },
                    jtype: Some(
                        AstJType {
                            annotated: [],
                            range: AstRange {
                                start: AstPoint { 0:1 },
                                end: AstPoint { 0:2 },
                            },
                            value: Class(
                                AstIdentifier {
                                    range: AstRange {
                                        start: AstPoint { 0:1 },
                                        end: AstPoint { 0:2 },
                                    },
                                    value: "T",
                                },
                            ),
                        },
                    ),
                    name: AstIdentifier {
                        range: AstRange {
                            start: AstPoint { 0:3 },
                            end: AstPoint { 0:4 },
                        },
                        value: "t",
                    },
                },
                AstLambdaParameter {
                    range: AstRange {
                        start: AstPoint { 0:6 },
                        end: AstPoint { 0:9 },
                    },
                    jtype: Some(
                        AstJType {
                            annotated: [],
                            range: AstRange {
                                start: AstPoint { 0:6 },
                                end: AstPoint { 0:7 },
                            },
                            value: Class(
                                AstIdentifier {
                                    range: AstRange {
                                        start: AstPoint { 0:6 },
                                        end: AstPoint { 0:7 },
                                    },
                                    value: "U",
                                },
                            ),
                        },
                    ),
                    name: AstIdentifier {
                        range: AstRange {
                            start: AstPoint { 0:8 },
                            end: AstPoint { 0:9 },
                        },
                        value: "u",
                    },
                },
            ],
        },
        rhs: Expr(
            [
                Base(
                    AstBaseExpression {
                        range: AstRange {
                            start: AstPoint { 0:14 },
                            end: AstPoint { 0:19 },
                        },
                        ident: Some(
                            Identifier(
                                AstIdentifier {
                                    range: AstRange {
                                        start: AstPoint { 0:14 },
                                        end: AstPoint { 0:19 },
                                    },
                                    value: "after",
                                },
                            ),
                        ),
                        values: None,
                        operator: None,
                    },
                ),
                Base(
                    AstBaseExpression {
                        range: AstRange {
                            start: AstPoint { 0:19 },
                            end: AstPoint { 0:20 },
                        },
                        ident: None,
                        values: None,
                        operator: Dot(
                            AstRange {
                                start: AstPoint { 0:19 },
                                end: AstPoint { 0:20 },
                            },
                        ),
                    },
                ),
                Base(
                    AstBaseExpression {
                        range: AstRange {
                            start: AstPoint { 0:20 },
                            end: AstPoint { 0:25 },
                        },
                        ident: Some(
                            Identifier(
                                AstIdentifier {
                                    range: AstRange {
                                        start: AstPoint { 0:20 },
                                        end: AstPoint { 0:25 },
                                    },
                                    value: "apply",
                                },
                            ),
                        ),
                        values: None,
                        operator: None,
                    },
                ),
                Base(
                    AstBaseExpression {
                        range: AstRange {
                            start: AstPoint { 0:25 },
                            end: AstPoint { 0:38 },
                        },
                        ident: None,
                        values: Some(
                            AstValues {
                                range: AstRange {
                                    start: AstPoint { 0:25 },
                                    end: AstPoint { 0:38 },
                                },
                                values: [
                                    [
                                        Base(
                                            AstBaseExpression {
                                                range: AstRange {
                                                    start: AstPoint { 0:26 },
                                                    end: AstPoint { 0:31 },
                                                },
                                                ident: Some(
                                                    Identifier(
                                                        AstIdentifier {
                                                            range: AstRange {
                                                                start: AstPoint { 0:26 },
                                                                end: AstPoint { 0:31 },
                                                            },
                                                            value: "apply",
                                                        },
                                                    ),
                                                ),
                                                values: None,
                                                operator: None,
                                            },
                                        ),
                                        Base(
                                            AstBaseExpression {
                                                range: AstRange {
                                                    start: AstPoint { 0:31 },
                                                    end: AstPoint { 0:37 },
                                                },
                                                ident: None,
                                                values: Some(
                                                    AstValues {
                                                        range: AstRange {
                                                            start: AstPoint { 0:31 },
                                                            end: AstPoint { 0:37 },
                                                        },
                                                        values: [
                                                            [
                                                                Base(
                                                                    AstBaseExpression {
                                                                        range: AstRange {
                                                                            start: AstPoint { 0:32 },
                                                                            end: AstPoint { 0:33 },
                                                                        },
                                                                        ident: Some(
                                                                            Identifier(
                                                                                AstIdentifier {
                                                                                    range: AstRange {
                                                                                        start: AstPoint { 0:32 },
                                                                                        end: AstPoint { 0:33 },
                                                                                    },
                                                                                    value: "t",
                                                                                },
                                                                            ),
                                                                        ),
                                                                        values: None,
                                                                        operator: None,
                                                                    },
                                                                ),
                                                            ],
                                                            [
                                                                Base(
                                                                    AstBaseExpression {
                                                                        range: AstRange {
                                                                            start: AstPoint { 0:35 },
                                                                            end: AstPoint { 0:36 },
                                                                        },
                                                                        ident: Some(
                                                                            Identifier(
                                                                                AstIdentifier {
                                                                                    range: AstRange {
                                                                                        start: AstPoint { 0:35 },
                                                                                        end: AstPoint { 0:36 },
                                                                                    },
                                                                                    value: "u",
                                                                                },
                                                                            ),
                                                                        ),
                                                                        values: None,
                                                                        operator: None,
                                                                    },
                                                                ),
                                                            ],
                                                        ],
                                                    },
                                                ),
                                                operator: None,
                                            },
                                        ),
                                    ],
                                ],
                            },
                        ),
                        operator: None,
                    },
                ),
            ],
        ),
    },
    19,
)
